Migrate to GTNH buildscripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,38 @@
-out
-eclipse
 .gradle
-*.bin
-Fullscreen-Windowed-Minecraft.iws
-.gradle/2.0/taskArtifacts/taskArtifacts.bin
+.settings
+/.idea/
+/.vscode/
+/run/
+/build/
+/eclipse/
+.classpath
+.project
+/bin/
+/config/
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
+/out/
+*.iml
+*.ipr
+*.iws
+src/main/resources/mixins.*([!.]).json
+*.bat
+*.DS_Store
+!gradlew.bat
+.factorypath
+addon.local.gradle
+addon.local.gradle.kts
+addon.late.local.gradle
+addon.late.local.gradle.kts
+layout.json
