Fixes the toggleFullScreen to proper work on Java 17-21

--- a/build.gradle
+++ b/build.gradle
@@ -782,7 +782,7 @@ ext.java17PatchDependenciesCfg = configurations.create("java17PatchDependencies"
 dependencies {
     def lwjgl3ifyVersion = '1.5.7'
     if (modId != 'lwjgl3ify') {
-        java17Dependencies("com.github.GTNewHorizons:lwjgl3ify:${lwjgl3ifyVersion}")
+        implementation("com.github.GTNewHorizons:lwjgl3ify:${lwjgl3ifyVersion}")
     }
     if (modId != 'hodgepodge') {
         java17Dependencies('com.github.GTNewHorizons:Hodgepodge:2.3.35')
